--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=TEST
 SQLALCHEMY_POOL_RECYCLE=3600
-SQLALCHEMY_DATABASE_URI=postgresql://postgres:M(oo)RCR(0)FT@82.165.5.64/dogtrainingrevolution
+SQLALCHEMY_DATABASE_URI=postgresql://postgres:DogTrainingRevolution1!@194.164.25.28/postgres
 FLASK_ENV=development
 FLASK_DEBUG="1"
 DEV=ON
